--- a/resources/css/guest.css
+++ b/resources/css/guest.css
@@ -150,13 +150,16 @@
     }
 }
 
-/* @import './components/buttons.css';
-@import './components/forms.css';
+@import './components/buttons.css';
 
 @import './partials/navbar.css';
 @import './partials/footer.css';
 
-@import './pages/general/home-page.css';
+@import './pages/general/home.css';
+
+/*
+@import './components/forms.css';
+
 @import './pages/general/about-page.css';
 @import './pages/general/contact.css';
 @import './pages/Authentication.css';
