--- a/resources/css/pages/general/home.css
+++ b/resources/css/pages/general/home.css
@@ -23,14 +23,14 @@
     }
 
     .Hero {
-        @apply relative flex items-center justify-center min-h-[85dvh] w-full overflow-hidden;
+        @apply relative flex items-center justify-center min-h-[90dvh] w-full overflow-hidden;
 
         video {
             @apply absolute inset-0 w-full h-full object-cover z-0
         }
 
         .mask {
-            @apply absolute inset-0 bg-black/50 z-10;
+            @apply absolute inset-0 bg-black/20 z-10;
         }
 
         .content {
@@ -110,8 +110,23 @@
                         @apply max-w-2xl;
                     }
 
-                    .btns_group {
+                    .trust_badges {
+                        @apply  grid grid-cols-5 gap-4 items-center mt-6 mb-8;
+                        .image {
+                            @apply w-[100px] h-[100px] bg-transparent;
+
+                            img {
+                                @apply w-full h-full object-contain;
+                            }
+                        }
+                    }
+
+                    .buttons_group {
                         @apply mt-8;
+
+                        a.btn_secondary {
+                            @apply bg-transparent border border-[var(--themed-btn)] text-[var(--themed-btn)];
+                        }
                     }
                 }
             }
