added a bg-gray to the destinations sections for more aesthetics.

--- a/resources/css/pages/general/home.css
+++ b/resources/css/pages/general/home.css
@@ -85,6 +85,8 @@
     }
 
     .Destinations {
+        @apply bg-gray-100;
+
         .container {
             .section_header {
                 @apply text-center;
