--- a/resources/css/partials/app-navbar.css
+++ b/resources/css/partials/app-navbar.css
@@ -1,66 +1,42 @@
 .app_navbar {
-    @apply sticky top-0 left-0 right-0 z-50 bg-gray-900 text-white font-semibold;
-
-    [x-cloak] {
-        display: none !important;
-    }
+    @apply relative bg-gray-100 text-gray-900 py-2 px-4 hidden md:block;
 
     .nav_container {
-        @apply flex items-center justify-between flex-wrap py-4 px-4 md:py-6 md:px-4;
-    }
-
-    .branding a {
-        @apply text-lg font-bold text-white;
-    }
-
-    .burger_menu {
-        @apply flex flex-col justify-center items-center space-y-1 cursor-pointer md:hidden;
-
-        span {
-            @apply w-6 h-0.5 bg-white block transition duration-300 ease-in-out;
-        }
-    }
-
-    .nav_links {
-        @apply w-full md:flex md:flex-1 md:justify-center hidden md:flex md:items-center mt-4 md:mt-0;
-
-        &.open {
-            @apply block;
+        .branding {
+            @apply py-4 mb-6;
         }
 
-        .main_links {
-            @apply flex flex-col md:flex-row md:space-x-6;
+        .nav_links {
+            .main_links {
+                @apply grid gap-2;
 
-            a, button {
-                @apply block py-2 md:py-0 text-white font-semibold hover:text-blue-200 transition-colors;
+                a, button {
+                    @apply block hover:text-blue-600 transition-colors border-b-2 border-gray-200 px-2;
+                }
+
+                a.active {
+                    @apply font-bold text-blue-800;
+                }
             }
 
-            a.active {
-                @apply font-bold border-b-2 border-white;
-            }
+            .other_links {
+                @apply absolute bottom-6 left-0 right-0 bg-gray-100 px-4 grid gap-2;
 
-            .mobile_only {
-                @apply md:hidden space-y-2 mt-4;
-            }
-        }
-    }
+                .profile {
+                    @apply mb-4;
 
-    .user_dropdown {
-        @apply relative;
+                    a {
+                        @apply grid gap-1;
 
-        .user_dropdown_toggle {
-            @apply flex items-center space-x-2 bg-white text-gray-800 rounded-full py-2 px-4 hover:bg-gray-100 transition;
-        }
+                        span {
+                            @apply text-sm text-gray-600;
+                        }
+                    }
+                }
 
-        .caret {
-            @apply w-4 h-4 transform transition-transform duration-300;
-        }
-
-        .dropdown_menu {
-            @apply absolute right-0 mt-2 w-48 bg-white rounded shadow-lg overflow-hidden z-50 text-gray-800;
-
-            a, button {
-                @apply block w-full text-left px-4 py-2;
+                button {
+                    @apply bg-red-600 text-white tracking-wide font-semibold rounded-md px-4 py-2 hover:bg-red-700 transition-colors;
+                }
             }
         }
     }
