--- a/resources/css/partials/footer.css
+++ b/resources/css/partials/footer.css
@@ -1,5 +1,5 @@
 footer {
-    @apply bg-[var(--themed-bg)] text-white py-12;
+    @apply bg-[var(--themed-bg)] text-white pt-12 pb-6;
 
     .container {
         @apply px-4 md:px-16 mx-auto;
@@ -74,7 +74,7 @@ footer {
         }
 
         .copyrights {
-            @apply border-t border-gray-100 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center;
+            @apply border-t border-gray-100 mt-8 pt-6 pb-0 flex flex-col md:flex-row justify-between items-center;
 
             .text,
             .text a {
