added the functionality for booking and viewing the bookings.

--- a/resources/css/components/buttons.css
+++ b/resources/css/components/buttons.css
@@ -43,3 +43,8 @@ button.btn_danger,
 a.btn_danger {
     @apply bg-red-600;
 }
+
+button.btn_themed,
+a.btn_themed {
+    @apply bg-[var(--themed-btn)] text-white hover:bg-[var(--themed-btn-hover)] focus:ring-2 focus:ring-[var(--themed-btn-focus)] focus:ring-offset-2;
+}
