--- a/resources/css/globals.css
+++ b/resources/css/globals.css
@@ -1,6 +1,8 @@
 @import "./tailwind.css";
 
 :root {
+    --main-theme-color: #B44E09;
+    --main-theme-text: white;
     --subtle-bg: #f3f4f6;
     --themed-bg: #0DA248;
     --themed-text: #B44E09;
@@ -9,8 +11,6 @@
 }
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: sans-serif, Arial, Helvetica;
 }
