corrected the update profile functionality.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -175,3 +175,4 @@
 @import './pages/Users.css';
 @import './pages/ContactMessages.css';
 @import './pages/Tours.css';
+@import "./pages/Authentication.css";
