Added content for the staff dashboard.

--- a/resources/css/pages/dashboard.css
+++ b/resources/css/pages/dashboard.css
@@ -63,3 +63,11 @@
         }
     }
 }
+
+.StaffDashboard {
+    .Charts {
+        .container {
+            @apply grid-cols-1 md:grid-cols-8;
+        }
+    }
+}
